##
## Copyright (C) 2004-2014  Calvin E. Peake, Jr. <cp@absolutedigital.net>
##
## This file is part of PINE.GPG.
##
## PINE.GPG is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License version 2 as
## published by the Free Software Foundation.
##
## PINE.GPG is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
## LICENSE file distributed with PINE.GPG for more details.
##
## Process this file with automake to produce Makefile.in

EXTRA_DIST = pine.gpg.1.in

man_MANS   = pine.gpg.1
